force-app/main/default/objects/CampaignMember/fields/WTR_Eval_Response_Processed__c.field-meta.xml
<CustomField>
    <fullName>WTR_Eval_Response_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked via flow (Campaign Member - WTR Eval Email Response Handler) when WTR Eval Responses have been processed.</description>
    <label>WTR Eval Response Processed</label>
    <type>Checkbox</type>
</CustomField>