force-app/main/default/objects/CampaignMember/fields/WTR_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>WTR_Rep_Name__c</fullName>
    <formula>Contact.Account.Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Ministry_Rep__r.FirstName &amp; &quot; &quot; &amp; Contact.Account.Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Ministry_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WTR Rep on Contact - Name</label>
    <type>Text</type>
</CustomField>