force-app/main/default/objects/CampaignMember/fields/WTR_Rep_on_Contact_User_ID__c.field-meta.xml
<CustomField>
    <fullName>WTR_Rep_on_Contact_User_ID__c</fullName>
    <formula>Contact.Account.Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Ministry_Rep__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WTR Rep on Contact - User ID</label>
    <type>Text</type>
</CustomField>