force-app/main/default/objects/CampaignMember/fields/WTR_Rep_on_Contact_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>WTR_Rep_on_Contact_User_Phone__c</fullName>
    <formula>Contact.Account.Event_Zip_Code_Look_Up__r.Event_Area_Code__r.Ministry_Rep__r.Phone</formula>
    <label>WTR Rep on Contact - User Phone</label>
    <type>Text</type>
</CustomField>