force-app/main/default/objects/CampaignMember/fields/WTR_Response_Template_Formula__c.field-meta.xml
<CustomField>
    <fullName>WTR_Response_Template_Formula__c</fullName>
    <formula>IF(
      AND (Invite__c, 

              AND ((NOT (  Impact_Local__c )), (NOT ( Lead_Small_Group__c )))

           ), &quot;Template B&quot;, 

           IF (
               OR (Lead_Small_Group__c, Impact_Local__c
                   ), 
               &quot;Template A&quot;, NULL
               )

   )</formula>
    <inlineHelpText>Formula determines which Template is required based on WTR Eval responses.</inlineHelpText>
    <label>WTR Response Template</label>
    <type>Text</type>
</CustomField>