force-app/main/default/objects/CampaignMember/fields/WTR_Survey_Responded__c.field-meta.xml
<CustomField>
    <fullName>WTR_Survey_Responded__c</fullName>
    <formula>OR(
Impact_Local__c = true,
Invite__c = true,
Lead_Small_Group__c = true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WTR Survey Responded</label>
    <type>Checkbox</type>
</CustomField>